# tip_time

./: build.gradle.kts  gradle.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/tiptime/: AppController.kt  MainActivity.kt
app/src/main/java/com/example/tiptime/API/: NewsApi.kt
app/src/main/java/com/example/tiptime/Adapters/: CacheAdapter.kt  NewsListAdapter.kt
app/src/main/java/com/example/tiptime/DB/: RetrofitInstance.kt
app/src/main/java/com/example/tiptime/Model/: Article.kt  NewsResponse.kt  Source.kt
app/src/main/java/com/example/tiptime/Repository/: NewsRepository.kt
app/src/main/java/com/example/tiptime/Screens/: HomeScreen.kt
app/src/main/java/com/example/tiptime/Utils/: Constants.kt  Resource.kt  SharedPreference.kt  Utils.kt
app/src/main/java/com/example/tiptime/ViewAdapter/: CustomAdapter.kt  CustomViewHolder.kt
app/src/main/java/com/example/tiptime/ViewModel/: NewsViewModel.kt  NewsViewModelFactory.kt
app/src/main/res/drawable/: background_drawable.xml  baseline_arrow_drop_down_24.xml  ic_black.xml  spinner_background.xml
app/src/main/res/layout/: activity_main.xml  fragment_home_screen.xml  fragment_news.xml  fragment_tip.xml  headline_list_item.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-sw/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
